--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
-        "module": "es6",
+        "module": "system",
         "moduleResolution": "node",
         "target": "es6",
         "noImplicitAny": false,
-        "sourceMap": false
+        "sourceMap": true
     }
 }
