Move from SystemJS to esbuild.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simulation of frequency domain peakcoalescene for a stocastic oscillator.",
   "main": "core.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "esbuild core.ts --watch --bundle --sourcemap --target=es6 --outfile=dist/coalescence.js --servedir=.",
+    "build": "esbuild core.ts --bundle --minify --target=es6 --outfile=dist/coalescence.js"
   },
   "repository": {
     "type": "git",
@@ -17,10 +18,10 @@
   },
   "homepage": "https://github.com/hessammehr/coalescence#readme",
   "dependencies": {
-    "d3": "^4.4.0",
-    "systemjs": "^0.19.41"
+    "d3": "^7.9.0"
   },
   "devDependencies": {
-    "@types/d3": "^4.3.0"
+    "@types/d3": "^7.4.3",
+    "esbuild": "^0.24.0"
   }
 }
